Fix scrolling code on mobile

--- a/homepage/homepage-frontend/homepage.css
+++ b/homepage/homepage-frontend/homepage.css
@@ -40,6 +40,7 @@ body {
 pre.sourceCode {
   background-color: #f0f0f0;
   border-radius: 3px;
+  overflow: scroll;
   padding: 10px;
 }
 
